--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-numpy~=1.26.4
-pandas~=2.2.2
-bertopic~=0.16.4
-sentence-transformers~=3.2.1
-nltk~=3.9.1
-pymorphy3~=2.0.2
-spacy~=3.7.6
-transformers~=4.46.2
-setuptools~=75.4.0
-plotly~=5.24.1
-wordcloud~=1.9.4
-tqdm~=4.67.0
+numpy==1.26.4
+pandas==2.2.2
+bertopic==0.16.4
+sentence-transformers==3.2.1
+nltk==3.9.1
+pymorphy3==2.0.2
+spacy==3.7.6
+transformers==4.46.2
+setuptools==75.4.0
+plotly==5.24.1
+wordcloud==1.9.4
+tqdm==4.67.0
