--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ bertopic==0.16.4
 sentence-transformers==3.2.1
 nltk==3.9.1
 pymorphy3==2.0.2
+pymorphy2==0.9.1
 spacy==3.7.6
 transformers==4.46.2
 setuptools==75.4.0
